# databloom

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  code-plan.md  pyproject.toml
examples/: all_themes.py  complex_stress_test.py  custom_layout.py  dashboard_fixed.py  finance_report.py  hr_analytics.py  quick_start.py  sales_dashboard.py  supply_chain.py
src/databloom/: README_CN.md  __init__.py  pyproject.toml  settings.py
src/databloom/core/: grid.py  workbook.py
src/databloom/data/: __init__.py  _generators.py  _seed.py
src/databloom/elements/: __init__.py  base.py  chart.py  image.py  sparkline.py  table.py  text.py
src/databloom/examples/: all_themes.py  custom_layout.py  quick_start.py
src/databloom/facade/: quick.py  report.py
src/databloom/layout/: engine.py  templates.py
src/databloom/reports/: __init__.py
src/databloom/scheduler/: __init__.py
src/databloom/theme/: base.py  presets.py
src/databloom/utils/: inspection.py
src/excelreport/: __init__.py
src/excelreport/core/: grid.py  workbook.py
src/excelreport/elements/: base.py  chart.py  image.py  table.py  text.py
src/excelreport/facade/: quick.py  report.py
src/excelreport/layout/: engine.py  templates.py
src/excelreport/theme/: base.py  presets.py
src/excelreport/utils/: inspection.py
tests/: conftest.py
tests/test_core/: test_grid.py  test_workbook.py
tests/test_data/: __init__.py  test_load_dataset.py
tests/test_elements/: test_chart.py  test_combo_chart.py  test_image.py  test_sparkline.py  test_table.py  test_text.py
tests/test_facade/: test_quick.py  test_report.py
tests/test_layout/: test_engine.py  test_templates.py
tests/test_scheduler/: test_scheduler.py
tests/test_theme/: test_base.py  test_presets.py  test_serialization.py
