[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databloom"
version = "0.3.1"
description = "Beautiful Excel reports from pandas DataFrames — make your data bloom"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "xiaozhozho", email = "xiao.zhouzhou@icloud.com"}
]
keywords = ["excel", "report", "xlsxwriter", "pandas", "dataframe", "databloom", "scheduler", "chart", "theme"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "xlsxwriter>=3.1.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
scheduler = [
    "schedule>=1.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "openpyxl>=3.1.0",
    "ruff>=0.11.0",
    "mypy>=1.10.0",
    "types-openpyxl",
]

[project.urls]
Repository = "https://github.com/xiaozhozho/databloom"
Documentation = "https://github.com/xiaozhozho/databloom#readme"
Issues = "https://github.com/xiaozhozho/databloom/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/databloom"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/databloom"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\b",
    "@(abc\\.)?abstractmethod",
]
